Add un union of the assignment test and coding labs to the workshop document array
